Add `-p <package>` to all cargo test commands

--- a/test/fixtures/rust-ts/crates/multi/Cargo.toml
+++ b/test/fixtures/rust-ts/crates/multi/Cargo.toml
@@ -1,11 +1,6 @@
 [package]
-name = "rust-ts"
+name = "multi"
 version = "0.1.0"
 edition = "2024"
-
-[workspace]
-members = [
-  "crates/multi"
-]
 
 [dependencies]
