--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
       - uses: emacs-eask/setup-eask@master
         with:
-          version: "snapshot"
+          version: "0.11.8"
 
       - name: Run tests
         run: |
