--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,11 @@ jobs:
         emacs-version:
           - 29.4
           - 30.1
-        experimental: [false]
+        experimental: [true]
         include:
           - os: ubuntu-latest
             emacs-version: snapshot
-            experimental: true
+            experimental: false
           - os: macos-latest
             emacs-version: snapshot
             experimental: true
